--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
       - injective
     volumes:
       - ./volumes/mongo:/data/db
+      - ./volumes/mongo/eventProviderV2:/eventProviderV2
       - ./volumes/mongo/exchangeV2:/exchangeV2
       - ./scripts/mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh
 
