feat: toggle dns for cosmos queries

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -39,6 +39,7 @@ GIT_MAINNET_TAG: "v1.7.0-1665417543"
 INDEXER_GAS_ADJUSTMENT_COEF=1.5
 INDEXER_BLOCK_FETCH_JOBS=2
 INDEXER_CHAIN_START_HEIGHT=2533984
+INDEXER_COSMOS_TLS_ENABLED="false"
 
 INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS=true
 
