--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -107,6 +107,7 @@ services:
       INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
       INDEXER_BLOCK_FETCH_JOBS: 2
       INDEXER_CHAIN_START_HEIGHT: ${INDEXER_CHAIN_START_HEIGHT}
+      INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
     ports:
       - 6069:6060
     deploy:
@@ -155,6 +156,7 @@ services:
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
       INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
       INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
+      INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
       ## service
       INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:4444
       INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
@@ -264,6 +266,7 @@ services:
       INDEXER_BLOCK_FETCH_JOBS: ${INDEXER_BLOCK_FETCH_JOBS}
       INDEXER_DB_EVENTPROVIDER_ENDPOINT: ${INDEXER_DB_EVENTPROVIDER_ENDPOINT}
       INDEXER_CHAIN_START_HEIGHT: ${INDEXER_CHAIN_START_HEIGHT}
+      INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
     ports:
       - 6071:6060
     deploy:
@@ -313,6 +316,7 @@ services:
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
       INDEXER_FEE_PAYER_PK: ${EXCHANGE_FEE_PAYER_PK}
       INDEXER_GAS_ADJUSTMENT_COEF: ${INDEXER_GAS_ADJUSTMENT_COEF}
+      INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
       ## service
       INDEXER_GRPC_LISTEN_ADDR: 0.0.0.0:9910
       INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:4444
@@ -371,6 +375,7 @@ services:
       INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
       INDEXER_BLOCK_FETCH_JOBS: ${INDEXER_BLOCK_FETCH_JOBS}
       INDEXER_DB_EVENTPROVIDER_ENDPOINT: ${INDEXER_DB_EVENTPROVIDER_ENDPOINT}
+      INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
       # chronos
       INDEXER_CHRONOS_DATA_PATH: var/data
       INDEXER_CHRONOS_RPC_ADDR: tcp://0.0.0.0:5500
@@ -426,6 +431,7 @@ services:
       # cmd specific
       ## chronos
       INDEXER_CHRONOS_RPC_ADDR: tcp://indexer-chronos-process:5500
+      INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
       ## mongo
       INDEXER_DB_MONGO_CONNECTION: ${INDEXER_DB_MONGO_CONNECTION}
       INDEXER_DB_MONGO_DBNAME: ${INDEXER_DB_MONGO_DBNAME}
