--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -346,6 +346,8 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
     hostname: ${HOSTNAME}
+    depends_on:
+      - indexer-exchange-api
     environment:
       # universal
       INDEXER_LOG_LEVEL: ${LOG_LEVEL}
@@ -376,6 +378,7 @@ services:
       INDEXER_BLOCK_FETCH_JOBS: ${INDEXER_BLOCK_FETCH_JOBS}
       INDEXER_DB_EVENTPROVIDER_ENDPOINT: ${INDEXER_DB_EVENTPROVIDER_ENDPOINT}
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
+      INDEXER_EXCHANGE_RPC_ADDR: ${INDEXER_EXCHANGE_RPC_ADDR}
       # chronos
       INDEXER_CHRONOS_DATA_PATH: var/data
       INDEXER_CHRONOS_RPC_ADDR: tcp://0.0.0.0:5500
@@ -442,6 +445,7 @@ services:
       INDEXER_HTTP_HORACLE_ADDR: https://k8s.${NETWORK}.horacle.injective.network/height/latest
       INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
       INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
+      INDEXER_EXCHANGE_RPC_ADDR: ${INDEXER_EXCHANGE_RPC_ADDR}
     ports:
       - 4445:4445
       - 6074:6060
