chore: add indexer api in chronos process

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -366,7 +366,9 @@ services:
       INDEXER_STATSD_STUCK_DUR: 5m
       INDEXER_STATSD_MOCKING: ${INDEXER_STATSD_MOCKING}
       INDEXER_STATSD_DISABLED: ${INDEXER_STATSD_DISABLED}
-      ## pprof
+      # exchange
+      INDEXER_EXCHANGE_RPC_ADDR: ${INDEXER_EXCHANGE_RPC_ADDR}
+      # pprof
       INDEXER_PPROF_ENABLED: "false"
       INDEXER_PPROF_ADDR: "0.0.0.0:6060"
       # cmd specific
