--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -159,6 +159,7 @@ services:
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
       ## service
       INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:4444
+      INDEXER_GRPC_LISTEN_ADDR: 0.0.0.0:9912
       INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
       INDEXER_HTTP_HORACLE_ADDR: https://k8s.${NETWORK}.horacle.injective.network/height/latest
@@ -265,6 +266,7 @@ services:
       INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
       INDEXER_BLOCK_FETCH_JOBS: ${INDEXER_BLOCK_FETCH_JOBS}
       INDEXER_DB_EVENTPROVIDER_ENDPOINT: ${INDEXER_DB_EVENTPROVIDER_ENDPOINT}
+      INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS: ${INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS}
       INDEXER_CHAIN_START_HEIGHT: ${INDEXER_CHAIN_START_HEIGHT}
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
     ports:
@@ -379,6 +381,7 @@ services:
       INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
       INDEXER_BLOCK_FETCH_JOBS: ${INDEXER_BLOCK_FETCH_JOBS}
       INDEXER_DB_EVENTPROVIDER_ENDPOINT: ${INDEXER_DB_EVENTPROVIDER_ENDPOINT}
+      INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS: ${INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS}
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
       # chronos
       INDEXER_CHRONOS_DATA_PATH: var/data
