--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -10,7 +10,7 @@
 MONIKER=injective
 CHAIN_ID=injective-888
 APP_ENV=staging
-APP_VERSION=1.7.2-tls
+APP_VERSION=v1.7.2
 NETWORK=testnet
 PASSPHRASE=""
 
@@ -21,7 +21,7 @@ LOG_BUGSNAG_ENABLED=false
 
 # Injective Core env #
 # Optional
-INJ_CORE_IMAGE_VERSION=1.7.1-patch
+INJ_CORE_IMAGE_VERSION=v1.8
 # Resource limits works only with swarm mode
 INJ_CORE_STACK_RESOURCE_RAM_LIMIT=8G
 INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=4G
@@ -32,7 +32,7 @@ INJ_PEGGO_STATSD_DISABLED="true"
 INJ_PEGGO_STATSD_ADDR=""
 
 # Provisioner Specific Env #
-GIT_TESTNET_TAG: "v0.4.19-1661549677"
+GIT_TESTNET_TAG: "v0.4.19-1668594735"
 GIT_MAINNET_TAG: "v1.7.0-1665417543"
 
 # Indexer Env #
