--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -32,8 +32,8 @@ INJ_PEGGO_STATSD_DISABLED="true"
 INJ_PEGGO_STATSD_ADDR=""
 
 # Provisioner Specific Env #
-GIT_TESTNET_TAG: "v0.4.19-1661549677"
-GIT_MAINNET_TAG: "v1.7.0-1665417543"
+GIT_TESTNET_TAG= "v0.4.19-1661549677"
+GIT_MAINNET_TAG= "v1.7.0-1665417543"
 
 # Indexer Env #
 INDEXER_GAS_ADJUSTMENT_COEF=1.5
