--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -84,3 +84,5 @@ INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS=indexer-eventprovider-api:9910
 INDEXER_TENDERMINT_RPC=tcp://host.docker.internal:26657
 INDEXER_COSMOS_GRPC=tcp://host.docker.internal:9900
 INDEXER_EXCHANGE_RPC_ADDR=indexer-exchange-api:9910
+INDEXER_MAX_BLOCK_FETCH_JOBS=8
+INDEXER_MIN_BLOCK_FETCH_JOBS=2
