--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -259,13 +259,15 @@ services:
       INDEXER_DB_ARCHIVE_EVENTS: "true"
       INDEXER_DB_MIGRATION_VERSION:
       INDEXER_DB_MIGRATION_HEIGHT:
-      INDEXER_DB_PAUSE_HEIGHT: ## cosmos
-
+      INDEXER_DB_PAUSE_HEIGHT:
+      ## cosmos
       INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS: ${INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS}
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
       INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
       INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
       INDEXER_BLOCK_FETCH_JOBS: ${INDEXER_BLOCK_FETCH_JOBS}
+      INDEXER_MAX_BLOCK_FETCH_JOBS: ${INDEXER_MAX_BLOCK_FETCH_JOBS}
+      INDEXER_MIN_BLOCK_FETCH_JOBS: ${INDEXER_MIN_BLOCK_FETCH_JOBS}
       INDEXER_DB_EVENTPROVIDER_ENDPOINT: ${INDEXER_DB_EVENTPROVIDER_ENDPOINT}
       INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS: ${INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS}
       INDEXER_CHAIN_START_HEIGHT: ${INDEXER_CHAIN_START_HEIGHT}
@@ -381,15 +383,15 @@ services:
       INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
       INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
       INDEXER_BLOCK_FETCH_JOBS: ${INDEXER_BLOCK_FETCH_JOBS}
+      INDEXER_MAX_BLOCK_FETCH_JOBS: ${INDEXER_MAX_BLOCK_FETCH_JOBS}
+      INDEXER_MIN_BLOCK_FETCH_JOBS: ${INDEXER_MIN_BLOCK_FETCH_JOBS}
       INDEXER_DB_EVENTPROVIDER_ENDPOINT: ${INDEXER_DB_EVENTPROVIDER_ENDPOINT}
       INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS: ${INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS}
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
       # chronos
       INDEXER_CHRONOS_DATA_PATH: var/data
       INDEXER_CHRONOS_RPC_ADDR: tcp://0.0.0.0:5500
-
       INDEXER_CHAIN_START_HEIGHT: ${INDEXER_CHAIN_START_HEIGHT}
-
       INDEXER_CHRONOS_RELAYER_ADDRESS: ${INDEXER_CHRONOS_RELAYER_ADDRESS}
       INDEXER_CHRONOS_LEADERBOARD_CROSS_MARKET_IDS: ${INDEXER_CHRONOS_LEADERBOARD_CROSS_MARKET_IDS}
       INDEXER_CHRONOS_LEADERBOARD_CUSTOM_RES: ${INDEXER_CHRONOS_LEADERBOARD_CUSTOM_RES}
