fix: comment position

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -264,8 +264,9 @@ services:
       INDEXER_DB_ARCHIVE_EVENTS: "true"
       INDEXER_DB_MIGRATION_VERSION:
       INDEXER_DB_MIGRATION_HEIGHT:
-      INDEXER_DB_PAUSE_HEIGHT: ## cosmos
+      INDEXER_DB_PAUSE_HEIGHT:
 
+      ## cosmos
       INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS: ${INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS}
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
       INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
