feat: separate service versions

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -10,9 +10,14 @@
 MONIKER=injective
 CHAIN_ID=injective-888
 APP_ENV=staging
-APP_VERSION=v1.9.0
 NETWORK=testnet
 PASSPHRASE=""
+
+# Service Versions #
+CHRONOS_APP_VERSION=v1.9.0
+EVENTPROVIDER_APP_VERSION=v1.9.0
+EXCHANGE_APP_VERSION=v1.9.0
+EXPLORER_APP_VERSION=v1.9.0
 
 # Logging Env #
 LOG_LEVEL="info"
