--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -10,9 +10,14 @@
 MONIKER=injective
 CHAIN_ID=injective-1
 APP_ENV=prod
-APP_VERSION=v1.9.0
 NETWORK=mainnet
 PASSPHRASE=""
+
+# Service Versions #
+CHRONOS_APP_VERSION=v1.9.0
+EVENTPROVIDER_APP_VERSION=v1.9.0
+EXCHANGE_APP_VERSION=v1.9.0
+EXPLORER_APP_VERSION=v1.9.0
 
 # Logging Env #
 LOG_LEVEL="info"
