feat: optional snapshots

--- a/docker/addons/docker-compose.provisioner.yaml
+++ b/docker/addons/docker-compose.provisioner.yaml
@@ -21,10 +21,10 @@ services:
       TESTNET_CONFIG_LATEST: "corfu/70001"
       TESTNET_CONFIG: "testnet-config"
       VOLUMES_PATH: "/home/ubuntu/volumes"
-      SYNC_CORE_SNAPSHOT: "true"
-      SYNC_EXCHANGE_SNAPSHOT: "true"
-      SYNC_CHRONOS_SNAPSHOT: "true"
-      SYNC_EVENT_PROVIDER_SNAPSHOT: "true"
+      SYNC_CORE_SNAPSHOT: ${SYNC_CORE_SNAPSHOT}
+      SYNC_EXCHANGE_SNAPSHOT: ${SYNC_EXCHANGE_SNAPSHOT}
+      SYNC_CHRONOS_SNAPSHOT: ${SYNC_CHRONOS_SNAPSHOT}
+      SYNC_EVENT_PROVIDER_SNAPSHOT: ${SYNC_EVENT_PROVIDER_SNAPSHOT}
       INJ_HOME: /home/ubuntu/volumes/.injectived
       NETWORK: ${NETWORK}
       APP_VERSION: ${APP_VERSION}
