--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -19,6 +19,12 @@ EVENTPROVIDER_APP_VERSION=v1.9.0
 EXCHANGE_APP_VERSION=v1.9.0
 EXPLORER_APP_VERSION=v1.9.0
 
+# Snapshots #
+SYNC_CORE_SNAPSHOT="true"
+SYNC_EXCHANGE_SNAPSHOT="true"
+SYNC_CHRONOS_SNAPSHOT="true"
+SYNC_EVENT_PROVIDER_SNAPSHOT="true"
+
 # Logging Env #
 LOG_LEVEL="info"
 LOG_BUGSNAG_KEY=
