chore: update .env examples

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -14,10 +14,10 @@ NETWORK=testnet
 PASSPHRASE=""
 
 # Service Versions #
-CHRONOS_APP_VERSION=v1.9.0
-EVENTPROVIDER_APP_VERSION=v1.9.0
-EXCHANGE_APP_VERSION=v1.9.0
-EXPLORER_APP_VERSION=v1.9.0
+CHRONOS_APP_VERSION=v1.9.8
+EVENTPROVIDER_APP_VERSION=v1.9.8
+EXCHANGE_APP_VERSION=v1.9.8
+EXPLORER_APP_VERSION=v1.9.8
 
 # Logging Env #
 LOG_LEVEL="info"
@@ -26,7 +26,7 @@ LOG_BUGSNAG_ENABLED=false
 
 # Injective Core env #
 # Optional
-INJ_CORE_IMAGE_VERSION=v1.9.0
+INJ_CORE_IMAGE_VERSION=v1.10-testnet
 # Resource limits works only with swarm mode
 INJ_CORE_STACK_RESOURCE_RAM_LIMIT=8G
 INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=4G
@@ -37,7 +37,7 @@ INJ_PEGGO_STATSD_DISABLED="true"
 INJ_PEGGO_STATSD_ADDR=""
 
 # Provisioner Specific Env #
-GIT_TESTNET_TAG="v0.4.19-1668594735"
+GIT_TESTNET_TAG="v1.10-1677061209"
 GIT_MAINNET_TAG="v1.8.0-1668679102"
 
 # Indexer Env #
