feat: add migration docker env

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -63,6 +63,7 @@ ASSET_SERVICE_URL=https://k8s.mainnet.asset.injective.network
 INDEXER_DB_MIGRATION_VERSION=
 INDEXER_DB_MIGRATION_HEIGHT=
 INDEXER_DB_PAUSE_HEIGHT=
+INDEXER_DB_MIGRATION_NAME=
 
 # Indexer Chronos env #
 INDEXER_CHRONOS_RELAYER_ADDRESS=inj1jv65s3grqf6v6jl3dp4t6c9t9rk99cd8dkncm8
