--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -60,9 +60,10 @@ HOSTNAME=
 ASSET_SERVICE_URL=https://k8s.testnet.asset.injective.network
 
 # Indexer Exchange env #
-INDEXER_DB_MIGRATION_VERSION=
-INDEXER_DB_MIGRATION_HEIGHT=
+INDEXER_DB_MIGRATION_VERSION="v0"
+INDEXER_DB_MIGRATION_HEIGHT=0
 INDEXER_DB_PAUSE_HEIGHT=
+INDEXER_DB_MIGRATION_NAME="account_portfolio_subaccount_initV1"
 
 # Indexer Chronos env #
 INDEXER_CHRONOS_RELAYER_ADDRESS=inj1cd0d4l9w9rpvugj8upwx0pt054v2fwtr563eh0
