--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -150,9 +150,10 @@ services:
       INDEXER_DB_MONGO_CONNECTION: ${INDEXER_DB_MONGO_CONNECTION}
       INDEXER_DB_MONGO_DBNAME: ${INDEXER_DB_MONGO_DBNAME}
       INDEXER_DB_ARCHIVE_EVENTS: "true"
-      INDEXER_DB_MIGRATION_VERSION:
-      INDEXER_DB_MIGRATION_HEIGHT:
-      INDEXER_DB_PAUSE_HEIGHT:
+      INDEXER_DB_MIGRATION_VERSION: ${INDEXER_DB_MIGRATION_VERSION}
+      INDEXER_DB_MIGRATION_HEIGHT: ${INDEXER_DB_MIGRATION_HEIGHT}
+      INDEXER_DB_MIGRATION_NAME: ${INDEXER_DB_MIGRATION_NAME}
+      INDEXER_DB_PAUSE_HEIGHT: ${INDEXER_DB_PAUSE_HEIGHT}
 
       ## cosmos
       INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS: ${INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS}
