--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -14,11 +14,11 @@ NETWORK=testnet
 PASSPHRASE=""
 
 # Service Versions #
-CHRONOS_APP_VERSION=v1.9.8
-EVENTPROVIDER_APP_VERSION=v1.9.8
-EXCHANGE_APP_VERSION=v1.9.8
-EXPLORER_APP_VERSION=v1.9.8
-
+CHRONOS_APP_VERSION=v1.10.0-rc.6
+EVENTPROVIDER_APP_VERSION=v1.10.0-rc.6
+EXCHANGE_APP_VERSION=v1.10.0-rc.6
+EXPLORER_APP_VERSION=v1.10.0-rc.6
+WEB3GW_APP_VERSION=v1.10.0-rc.6
 # Snapshots #
 SYNC_CORE_SNAPSHOT="true"
 SYNC_EXCHANGE_SNAPSHOT="true"
