fix:inject INDEXER_COSMOS_LCD_URL in exchange-process dockerfile

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -218,6 +218,7 @@ services:
       INDEXER_FEE_PAYER_PK: ${EXCHANGE_FEE_PAYER_PK}
       INDEXER_GAS_ADJUSTMENT_COEF: ${INDEXER_GAS_ADJUSTMENT_COEF}
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
+      INDEXER_COSMOS_LCD_URL: ${INDEXER_COSMOS_LCD_URL}
       ## service
       INDEXER_GRPC_LISTEN_ADDR: 0.0.0.0:9910
       INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:4444
