chore: add LCD in .env

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -95,6 +95,7 @@ INDEXER_DB_EVENTPROVIDER_ENDPOINT=indexer-eventprovider-api:4444
 INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS=indexer-eventprovider-api:9910
 INDEXER_TENDERMINT_RPC=tcp://injective-core:26657
 INDEXER_COSMOS_GRPC=tcp://injective-core:9900
+INDEXER_COSMOS_LCD_URL=http://injective-core:1317
 INDEXER_EXCHANGE_RPC_ADDR=indexer-exchange-api:9910
 INDEXER_MAX_BLOCK_FETCH_JOBS=8
 INDEXER_MIN_BLOCK_FETCH_JOBS=2
