--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -160,6 +160,7 @@ services:
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
       INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
       INDEXER_COSMOS_GRPC: ${INDEXER_COSMOS_GRPC}
+      INDEXER_COSMOS_LCD_URL: ${INDEXER_COSMOS_LCD_URL}
       INDEXER_BLOCK_FETCH_JOBS: ${INDEXER_BLOCK_FETCH_JOBS}
       INDEXER_MAX_BLOCK_FETCH_JOBS: ${INDEXER_MAX_BLOCK_FETCH_JOBS}
       INDEXER_MIN_BLOCK_FETCH_JOBS: ${INDEXER_MIN_BLOCK_FETCH_JOBS}
