chore: update testnet release

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -32,7 +32,7 @@ LOG_BUGSNAG_ENABLED=false
 
 # Injective Core env #
 # Optional
-INJ_CORE_IMAGE_VERSION=v1.10-testnet
+INJ_CORE_IMAGE_VERSION=v1.10.1
 # Resource limits works only with swarm mode
 INJ_CORE_STACK_RESOURCE_RAM_LIMIT=8G
 INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=4G
