chore: add mongo RAM limit

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -14,10 +14,13 @@ NETWORK=mainnet
 PASSPHRASE=""
 
 # Service Versions #
-CHRONOS_APP_VERSION=v1.9.8
-EVENTPROVIDER_APP_VERSION=v1.9.8
-EXCHANGE_APP_VERSION=v1.9.8
-EXPLORER_APP_VERSION=v1.9.8
+CHRONOS_APP_VERSION=v1.10.0
+EVENTPROVIDER_APP_VERSION=v1.10.0
+EXCHANGE_APP_VERSION=v1.10.0
+EXPLORER_APP_VERSION=v1.10.0
+WEB3GW_APP_VERSION=v1.10.0
+
+MONGO_RAM_LIMIT=70G
 
 # Snapshots #
 SYNC_CORE_SNAPSHOT="true"
@@ -34,8 +37,8 @@ LOG_BUGSNAG_ENABLED=false
 # Optional
 INJ_CORE_IMAGE_VERSION=v1.9.0
 # Resource limits works only with swarm mode
-INJ_CORE_STACK_RESOURCE_RAM_LIMIT=8G
-INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=4G
+INJ_CORE_STACK_RESOURCE_RAM_LIMIT=80G
+INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=30G
 
 # Peggo Optional Env #
 INJ_ADDR=""
