--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -19,6 +19,9 @@ EVENTPROVIDER_APP_VERSION=v1.10.0
 EXCHANGE_APP_VERSION=v1.10.0
 EXPLORER_APP_VERSION=v1.10.0
 WEB3GW_APP_VERSION=v1.10.0
+
+MONGO_RAM_LIMIT=30G
+
 # Snapshots #
 SYNC_CORE_SNAPSHOT="true"
 SYNC_EXCHANGE_SNAPSHOT="true"
