fix: bump indexer version and inject missing cosmos docker env var

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -160,6 +160,7 @@ services:
       INDEXER_DB_PAUSE_HEIGHT: ${INDEXER_DB_PAUSE_HEIGHT}
 
       ## cosmos
+      INDEXER_COSMOS_LCD_URL: ${INDEXER_COSMOS_LCD_URL}
       INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS: ${INDEXER_PROTO_ALLOW_UNKNOWN_FIELDS}
       INDEXER_COSMOS_CHAIN_ID: ${CHAIN_ID}
       INDEXER_TENDERMINT_RPC: ${INDEXER_TENDERMINT_RPC}
