chore: add migration 1.9.x to 1.10.x config

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -63,10 +63,10 @@ HOSTNAME=
 ASSET_SERVICE_URL=https://k8s.mainnet.asset.injective.network
 
 # Indexer Exchange env #
-INDEXER_DB_MIGRATION_VERSION=
-INDEXER_DB_MIGRATION_HEIGHT=
+INDEXER_DB_MIGRATION_VERSION="v0"
+INDEXER_DB_MIGRATION_HEIGHT=0
 INDEXER_DB_PAUSE_HEIGHT=
-INDEXER_DB_MIGRATION_NAME=
+INDEXER_DB_MIGRATION_NAME="account_portfolio_subaccount_initV1"
 
 # Indexer Chronos env #
 INDEXER_CHRONOS_RELAYER_ADDRESS=inj1jv65s3grqf6v6jl3dp4t6c9t9rk99cd8dkncm8
