feat: add explorer snapshot

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -25,6 +25,7 @@ MONGO_RAM_LIMIT=30G
 # Snapshots #
 SYNC_CORE_SNAPSHOT="true"
 SYNC_EXCHANGE_SNAPSHOT="true"
+SYNC_EXPLORER_SNAPSHOT="false"
 SYNC_CHRONOS_SNAPSHOT="true"
 SYNC_EVENT_PROVIDER_SNAPSHOT="true"
 
