--- a/docker/addons/docker-compose.provisioner.yaml
+++ b/docker/addons/docker-compose.provisioner.yaml
@@ -23,6 +23,7 @@ services:
       VOLUMES_PATH: "/home/ubuntu/volumes"
       SYNC_CORE_SNAPSHOT: ${SYNC_CORE_SNAPSHOT}
       SYNC_EXCHANGE_SNAPSHOT: ${SYNC_EXCHANGE_SNAPSHOT}
+      SYNC_EXPLORER_SNAPSHOT: ${SYNC_EXPLORER_SNAPSHOT}
       SYNC_CHRONOS_SNAPSHOT: ${SYNC_CHRONOS_SNAPSHOT}
       SYNC_EVENT_PROVIDER_SNAPSHOT: ${SYNC_EVENT_PROVIDER_SNAPSHOT}
       INJ_HOME: /home/ubuntu/volumes/.injectived
