feat: mongo - add wiredTigerCacheSizeGB var

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -20,7 +20,9 @@ EXCHANGE_APP_VERSION=v1.10.6
 EXPLORER_APP_VERSION=v1.10.3
 WEB3GW_APP_VERSION=v1.10.3
 
+#MONGO LIMITS
 MONGO_RAM_LIMIT=70G
+MONGO_WIREDTIGER_CACHE_GB=56
 
 # Snapshots #
 SYNC_CORE_SNAPSHOT="true"
