--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -20,7 +20,9 @@ EXCHANGE_APP_VERSION=v1.10.3
 EXPLORER_APP_VERSION=v1.10.3
 WEB3GW_APP_VERSION=v1.10.3
 
-MONGO_RAM_LIMIT=30G
+#MONGO LIMITS
+MONGO_RAM_LIMIT=32G
+MONGO_WIREDTIGER_CACHE_GB=24
 
 # Snapshots #
 SYNC_CORE_SNAPSHOT="true"
