chore: update indexer versions + chronos env var

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -14,11 +14,11 @@ NETWORK=mainnet
 PASSPHRASE=""
 
 # Service Versions #
-CHRONOS_APP_VERSION=v1.11.0
-EVENTPROVIDER_APP_VERSION=v1.11.0
-EXCHANGE_APP_VERSION=v1.11.0
-EXPLORER_APP_VERSION=v1.11.0
-WEB3GW_APP_VERSION=v1.11.0
+CHRONOS_APP_VERSION=v1.12.1
+EVENTPROVIDER_APP_VERSION=v1.12.2
+EXCHANGE_APP_VERSION=v1.12.2
+EXPLORER_APP_VERSION=v1.12.2
+WEB3GW_APP_VERSION=v1.12.0
 
 #MONGO LIMITS
 MONGO_RAM_LIMIT=70G
@@ -38,7 +38,7 @@ LOG_BUGSNAG_ENABLED=false
 
 # Injective Core env #
 # Optional
-INJ_CORE_IMAGE_VERSION=v1.11.0
+INJ_CORE_IMAGE_VERSION=v1.11.6-rc0
 # Resource limits works only with swarm mode
 INJ_CORE_STACK_RESOURCE_RAM_LIMIT=80G
 INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=30G
@@ -87,6 +87,7 @@ INDEXER_CHRONOS_PROCESS_MEMORY_LIMIT=8G
 INDEXER_CHRONOS_API_MEMORY_LIMIT=4G
 INDEXER_EXCHANGE_PROCESS_MEMORY_LIMIT=8G
 INDEXER_EXCHANGE_API_MEMORY_LIMIT=4G
+INDEXER_VOLUME_SINGLE_SIDE_HEIGHT="40400000"
 
 #############################
 ### END User Configurable ###
