--- a/docker/addons/docker-compose.dex.yaml
+++ b/docker/addons/docker-compose.dex.yaml
@@ -56,7 +56,7 @@ services:
       INDEXER_CHRONOS_RELAYER_ADDRESS: ${INDEXER_CHRONOS_RELAYER_ADDRESS}
       INDEXER_CHRONOS_LEADERBOARD_CROSS_MARKET_IDS: ${INDEXER_CHRONOS_LEADERBOARD_CROSS_MARKET_IDS}
       INDEXER_CHRONOS_LEADERBOARD_CUSTOM_RES: ${INDEXER_CHRONOS_LEADERBOARD_CUSTOM_RES}
-
+      INDEXER_VOLUME_SINGLE_SIDE_HEIGHT: ${INDEXER_VOLUME_SINGLE_SIDE_HEIGHT}
     ports:
       - 5500:5500
       - 6073:6060
