feat: customizable INDEXER_EVENTPROVIDER_BLOCK_FETCH_JOBS

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -105,3 +105,4 @@ INDEXER_COSMOS_LCD_URL=http://injective-core:10337
 INDEXER_EXCHANGE_RPC_ADDR=indexer-exchange-api:9910
 INDEXER_MAX_BLOCK_FETCH_JOBS=8
 INDEXER_MIN_BLOCK_FETCH_JOBS=2
+INDEXER_EVENTPROVIDER_BLOCK_FETCH_JOBS=2
