chore: add v1.12 upgrade

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -38,7 +38,7 @@ LOG_BUGSNAG_ENABLED=false
 
 # Injective Core env #
 # Optional
-INJ_CORE_IMAGE_VERSION=v1.11.6-rc0
+INJ_CORE_IMAGE_VERSION=v1.12.0
 # Resource limits works only with swarm mode
 INJ_CORE_STACK_RESOURCE_RAM_LIMIT=80G
 INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=30G
