--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -151,6 +151,9 @@ services:
       INDEXER_PPROF_ENABLED: "false"
       INDEXER_PPROF_ADDR: "0.0.0.0:6060"
       # cmd specific
+      INDEXER_EXCHANGE_REBUILD_ORDERBOOKS: ${INDEXER_EXCHANGE_REBUILD_ORDERBOOKS}
+      ## feature flags
+      INDEXER_FEATURE_FLAG_TRADING_STRATEGIES_INDEXING: "true"
       ## mongo
       INDEXER_DB_MONGO_CONNECTION: ${INDEXER_DB_MONGO_CONNECTION}
       INDEXER_DB_MONGO_DBNAME: ${INDEXER_DB_MONGO_DBNAME}
