feat(exchange): add default env vars for examples in v1.12.46

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -70,6 +70,8 @@ INDEXER_DB_MIGRATION_VERSION="v0"
 INDEXER_DB_MIGRATION_HEIGHT=0
 INDEXER_DB_PAUSE_HEIGHT=
 INDEXER_DB_MIGRATION_NAME="account_portfolio_subaccount_initV1"
+INDEXER_EXCHANGE_REBUILD_ORDERBOOKS="false"
+INDEXER_FEATURE_FLAG_TRADING_STRATEGIES_INDEXING="true"
 
 # Indexer Chronos env #
 INDEXER_CHRONOS_RELAYER_ADDRESS=inj1jv65s3grqf6v6jl3dp4t6c9t9rk99cd8dkncm8
