--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -70,6 +70,8 @@ INDEXER_DB_MIGRATION_VERSION="v0"
 INDEXER_DB_MIGRATION_HEIGHT=0
 INDEXER_DB_PAUSE_HEIGHT=
 INDEXER_DB_MIGRATION_NAME="account_portfolio_subaccount_initV1"
+INDEXER_EXCHANGE_REBUILD_ORDERBOOKS="false"
+INDEXER_FEATURE_FLAG_TRADING_STRATEGIES_INDEXING="true"
 
 # Indexer Chronos env #
 INDEXER_CHRONOS_RELAYER_ADDRESS=inj1cd0d4l9w9rpvugj8upwx0pt054v2fwtr563eh0
