feat(exchange): whitelist SGT smart contract addresses

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -72,6 +72,7 @@ INDEXER_DB_PAUSE_HEIGHT=
 INDEXER_DB_MIGRATION_NAME="account_portfolio_subaccount_initV1"
 INDEXER_EXCHANGE_REBUILD_ORDERBOOKS="false"
 INDEXER_FEATURE_FLAG_TRADING_STRATEGIES_INDEXING="true"
+INDEXER_SPOT_GRID_TRADING_CONTRACT_WHITELIST=inj14yr8nj6tndmr4xyw9c66feqepv59revxsm7450,inj1djlhetddzrztjn4v0s4vt0dca3y8hwshkh37zg,inj1aehu642q3td95jlpprgcypmstmn3pknaq4rsjn,inj18sl3ysva0czdgc2eqmqlrhfeu2v4l8vx4245ql
 
 # Indexer Chronos env #
 INDEXER_CHRONOS_RELAYER_ADDRESS=inj1cd0d4l9w9rpvugj8upwx0pt054v2fwtr563eh0
