--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -152,6 +152,7 @@ services:
       INDEXER_PPROF_ADDR: "0.0.0.0:6060"
       # cmd specific
       INDEXER_EXCHANGE_REBUILD_ORDERBOOKS: ${INDEXER_EXCHANGE_REBUILD_ORDERBOOKS}
+      INDEXER_SPOT_GRID_TRADING_CONTRACT_WHITELIST: ${INDEXER_SPOT_GRID_TRADING_CONTRACT_WHITELIST}
       ## feature flags
       INDEXER_FEATURE_FLAG_TRADING_STRATEGIES_INDEXING: "true"
       ## mongo
