--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -72,6 +72,7 @@ INDEXER_DB_PAUSE_HEIGHT=
 INDEXER_DB_MIGRATION_NAME="account_portfolio_subaccount_initV1"
 INDEXER_EXCHANGE_REBUILD_ORDERBOOKS="false"
 INDEXER_FEATURE_FLAG_TRADING_STRATEGIES_INDEXING="true"
+INDEXER_SPOT_GRID_TRADING_CONTRACT_WHITELIST=inj1c5jsz3dk2g6wywygchwrlwxl5gyz2yu7rnxxdr,inj1x4kr29dlf9u4r7ya6mr2jvs0pc9sfhnlhlr9np,inj1ljzjh8tzuvrj7mkhv9mxvv4cedn7kzauargrey
 
 # Indexer Chronos env #
 INDEXER_CHRONOS_RELAYER_ADDRESS=inj1jv65s3grqf6v6jl3dp4t6c9t9rk99cd8dkncm8
