Add missing stream API command

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -42,6 +42,7 @@ INJ_CORE_IMAGE_VERSION=v1.11.8
 # Resource limits works only with swarm mode
 INJ_CORE_STACK_RESOURCE_RAM_LIMIT=30G
 INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=20G
+INJ_CORE_CMD_STREAM_API="--chainstream-server 0.0.0.0:9999" #Set empty string to disable
 
 # Peggo Optional Env #
 INJ_ADDR=""
