feat(exchange): add resync env vars

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -179,6 +179,10 @@ services:
       INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS: ${INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS}
       INDEXER_CHAIN_START_HEIGHT: ${INDEXER_CHAIN_START_HEIGHT}
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
+      # resync
+      INDEXER_RESYNC_DB_NAME: ${INDEXER_RESYNC_DB_NAME}
+      INDEXER_RESYNC_FLOW: ${INDEXER_RESYNC_FLOW}
+      INDEXER_RESYNC_START_HEIGHT: ${INDEXER_RESYNC_START_HEIGHT}
     ports:
       - 6071:6060
     deploy:
