feat: separate api and process versions

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -14,11 +14,15 @@ NETWORK=testnet
 PASSPHRASE=""
 
 # Service Versions #
-CHRONOS_APP_VERSION=v1.12.0
-EVENTPROVIDER_APP_VERSION=v1.12.0
-EXCHANGE_APP_VERSION=v1.12.2
-EXPLORER_APP_VERSION=v1.12.2
-WEB3GW_APP_VERSION=v1.12.0
+CHRONOS_PROCESS_VERSION=v1.12.45
+CHRONOS_API_VERSION=v1.12.45
+EVENTPROVIDER_PROCESS_VERSION=v1.12.67
+EVENTPROVIDER_API_VERSION=v1.12.67
+EXCHANGE_PROCESS_VERSION=v1.12.71
+EXCHANGE_API_VERSION=v1.12.71
+EXPLORER_PROCESS_VERSION=v1.12.67
+EXPLORER_API_VERSION=v1.12.67
+WEB3GW_APP_VERSION=v1.12.46-rc.0
 
 #MONGO LIMITS
 MONGO_RAM_LIMIT=32G
