--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -14,10 +14,14 @@ NETWORK=mainnet
 PASSPHRASE=""
 
 # Service Versions #
-CHRONOS_APP_VERSION=v1.12.1
-EVENTPROVIDER_APP_VERSION=v1.12.2
-EXCHANGE_APP_VERSION=v1.12.2
-EXPLORER_APP_VERSION=v1.12.2
+CHRONOS_PROCESS_VERSION=v1.12.69
+CHRONOS_API_VERSION=v1.12.69
+EVENTPROVIDER_PROCESS_VERSION=v1.12.67
+EVENTPROVIDER_API_VERSION=v1.12.67
+EXCHANGE_PROCESS_VERSION=v1.12.67
+EXCHANGE_API_VERSION=v1.12.71
+EXPLORER_PROCESS_VERSION=v1.12.66
+EXPLORER_API_VERSION=v1.12.66
 WEB3GW_APP_VERSION=v1.12.0
 
 #MONGO LIMITS
