--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -46,7 +46,7 @@ INJ_CORE_IMAGE_VERSION=v1.11.6-rc0
 # Resource limits works only with swarm mode
 INJ_CORE_STACK_RESOURCE_RAM_LIMIT=80G
 INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=30G
-INJ_CORE_CMD_STREAM_API="--chainstream-server 0.0.0.0:9999" #Set empty string to disable
+# INJ_CORE_CMD_STREAM_API="--chainstream-server 0.0.0.0:9999" #Set empty string to disable
 
 # Peggo Optional Env #
 INJ_ADDR=""
@@ -105,7 +105,7 @@ INDEXER_EXCHANGE_API_MEMORY_LIMIT=4G
 
 # Indexer Connections #
 INDEXER_DB_MONGO_DBNAME=exchangeV2
-INDEXER_DB_MONGO_CONNECTION="mongodb://mongo:27017/?replicaSet=rs0&connect=direct"
+INDEXER_DB_MONGO_CONNECTION="mongodb://mongo:27017/?replicaSet=rs0&connect=direct&maxPoolSize=1000"
 INDEXER_DB_EVENTPROVIDER_ENDPOINT=indexer-eventprovider-api:4444
 INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS=indexer-eventprovider-api:9910
 INDEXER_TENDERMINT_RPC=tcp://injective-core:26657
