--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -105,7 +105,7 @@ INDEXER_EXCHANGE_API_MEMORY_LIMIT=4G
 
 # Indexer Connections #
 INDEXER_DB_MONGO_DBNAME=exchangeV2
-INDEXER_DB_MONGO_CONNECTION="mongodb://mongo:27017/?replicaSet=rs0&connect=direct"
+INDEXER_DB_MONGO_CONNECTION="mongodb://mongo:27017/?replicaSet=rs0&connect=direct&maxPoolSize=1000"
 INDEXER_DB_EVENTPROVIDER_ENDPOINT=indexer-eventprovider-api:4444
 INDEXER_DB_EVENTPROVIDER_GRPC_ADDRESS=indexer-eventprovider-api:9910
 INDEXER_TENDERMINT_RPC=tcp://injective-core:26657
