--- a/docker/addons/docker-compose.dex.yaml
+++ b/docker/addons/docker-compose.dex.yaml
@@ -57,9 +57,19 @@ services:
       INDEXER_CHRONOS_LEADERBOARD_CROSS_MARKET_IDS: ${INDEXER_CHRONOS_LEADERBOARD_CROSS_MARKET_IDS}
       INDEXER_CHRONOS_LEADERBOARD_CUSTOM_RES: ${INDEXER_CHRONOS_LEADERBOARD_CUSTOM_RES}
       INDEXER_VOLUME_SINGLE_SIDE_HEIGHT: ${INDEXER_VOLUME_SINGLE_SIDE_HEIGHT}
+
+      INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:9910
+      INDEXER_GRPC_LISTEN_ADDR: 0.0.0.0:4444
+      INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
+      INDEXER_HTTP_TLS_KEY: /apps/data/private.key
+      INDEXER_HTTP_HORACLE_ADDR: https://k8s.global.mainnet.horacle.injective.network/height/latest
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
     ports:
       - 5500:5500
       - 6073:6060
+      - 10012:9910
+      - 4546:4444
     deploy:
       resources:
         limits:
@@ -174,8 +184,18 @@ services:
       INDEXER_MIN_BLOCK_FETCH_JOBS: ${INDEXER_MIN_BLOCK_FETCH_JOBS}
       INDEXER_CHAIN_START_HEIGHT: ${INDEXER_CHAIN_START_HEIGHT}
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
+
+      INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:9910
+      INDEXER_GRPC_LISTEN_ADDR: 0.0.0.0:4444
+      INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
+      INDEXER_HTTP_TLS_KEY: /apps/data/private.key
+      INDEXER_HTTP_HORACLE_ADDR: https://k8s.global.mainnet.horacle.injective.network/height/latest
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
     ports:
       - 6075:6060
+      - 10011:9910
+      - 4545:4444
     deploy:
       resources:
         limits:
@@ -281,8 +301,18 @@ services:
       INDEXER_BLOCK_FETCH_JOBS: ${INDEXER_EVENTPROVIDER_BLOCK_FETCH_JOBS}
       INDEXER_CHAIN_START_HEIGHT: ${INDEXER_CHAIN_START_HEIGHT}
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
+      
+      INDEXER_GRPC_LISTEN_ADDR: 0.0.0.0:9910
+      INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:4444
+      INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
+      INDEXER_HTTP_TLS_KEY: /apps/data/private.key
+      INDEXER_HTTP_HORACLE_ADDR: https://k8s.${NETWORK}.horacle.injective.network/height/latest
+      INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
+      INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
     ports:
       - 6069:6060
+      - 10013:9910
+      - 4547:4444
     deploy:
       resources:
         limits:
