feat: move horacle addr to template

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -115,3 +115,4 @@ INDEXER_EXCHANGE_RPC_ADDR=indexer-exchange-api:9910
 INDEXER_MAX_BLOCK_FETCH_JOBS=8
 INDEXER_MIN_BLOCK_FETCH_JOBS=2
 INDEXER_EVENTPROVIDER_BLOCK_FETCH_JOBS=2
+INDEXER_HTTP_HORACLE_ADDR="https://k8s.global.mainnet.horacle.injective.network/height/latest"
