--- a/docker/addons/docker-compose.dex.yaml
+++ b/docker/addons/docker-compose.dex.yaml
@@ -51,7 +51,7 @@ services:
       INDEXER_COSMOS_TLS_ENABLED: ${INDEXER_COSMOS_TLS_ENABLED}
       # chronos
       INDEXER_CHRONOS_DATA_PATH: var/data
-      INDEXER_CHRONOS_RPC_ADDR: tcp://0.0.0.0:5500
+      INDEXER_CHRONOS_RPC_ADDR: 0.0.0.0:5500
       INDEXER_CHAIN_START_HEIGHT: ${INDEXER_CHAIN_START_HEIGHT}
       INDEXER_CHRONOS_RELAYER_ADDRESS: ${INDEXER_CHRONOS_RELAYER_ADDRESS}
       INDEXER_CHRONOS_LEADERBOARD_CROSS_MARKET_IDS: ${INDEXER_CHRONOS_LEADERBOARD_CROSS_MARKET_IDS}
