chore: fix health ep

--- a/docker/addons/docker-compose.dex.yaml
+++ b/docker/addons/docker-compose.dex.yaml
@@ -121,7 +121,7 @@ services:
       INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:4445
       INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
-      INDEXER_HTTP_HORACLE_ADDR: https://k8s.${NETWORK}.horacle.injective.network/height/latest
+      INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
       INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
       INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
       INDEXER_EXCHANGE_RPC_ADDR: ${INDEXER_EXCHANGE_RPC_ADDR}
@@ -244,7 +244,7 @@ services:
       INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:4444
       INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
-      INDEXER_HTTP_HORACLE_ADDR: https://k8s.${NETWORK}.horacle.injective.network/height/latest
+      INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
       INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
       INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
     ports:
@@ -306,7 +306,7 @@ services:
       INDEXER_HTTP_LISTEN_ADDR: 0.0.0.0:4444
       INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
-      INDEXER_HTTP_HORACLE_ADDR: https://k8s.${NETWORK}.horacle.injective.network/height/latest
+      INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
       INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
       INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
     ports:
@@ -366,7 +366,7 @@ services:
       INDEXER_GRPC_LISTEN_ADDR: 0.0.0.0:9910
       INDEXER_HTTP_TLS_CERT: /apps/data/public.crt
       INDEXER_HTTP_TLS_KEY: /apps/data/private.key
-      INDEXER_HTTP_HORACLE_ADDR: https://k8s.${NETWORK}.horacle.injective.network/height/latest
+      INDEXER_HTTP_HORACLE_ADDR: ${INDEXER_HTTP_HORACLE_ADDR}
       INDEXER_HTTP_HORACLE_BLOCK_THRESHOLD: 10
       INDEXER_HTTP_HORACLE_TIMESTAMP_THRESHOLD: 60
     ports:
