feat: set wasm memory cache size

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -46,8 +46,8 @@ INJ_CORE_IMAGE_VERSION=v1.11.6-rc0
 # Resource limits works only with swarm mode
 INJ_CORE_STACK_RESOURCE_RAM_LIMIT=80G
 INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=30G
-# INJ_CORE_CMD_STREAM_API="--chainstream-server 0.0.0.0:9999" #Set empty string to disable
-
+INJ_CORE_CMD_STREAM_API="--chainstream-server 0.0.0.0:9999" #Set empty string to disable
+WASM_MEM_CACHE_SIZE=3000
 # Peggo Optional Env #
 INJ_ADDR=""
 INJ_PEGGO_STATSD_DISABLED="true"
