--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -47,7 +47,7 @@ INJ_CORE_IMAGE_VERSION=v1.12.9-testnet
 INJ_CORE_STACK_RESOURCE_RAM_LIMIT=30G
 INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=20G
 INJ_CORE_CMD_STREAM_API="--chainstream-server 0.0.0.0:9999" #Set empty string to disable
-
+WASM_MEM_CACHE_SIZE=3000
 # Peggo Optional Env #
 INJ_ADDR=""
 INJ_PEGGO_STATSD_DISABLED="true"
