--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -14,15 +14,15 @@ NETWORK=mainnet
 PASSPHRASE=""
 
 # Service Versions #
-CHRONOS_PROCESS_VERSION=v1.12.69
-CHRONOS_API_VERSION=v1.12.69
-EVENTPROVIDER_PROCESS_VERSION=v1.12.67
-EVENTPROVIDER_API_VERSION=v1.12.67
-EXCHANGE_PROCESS_VERSION=v1.12.67
-EXCHANGE_API_VERSION=v1.12.71
-EXPLORER_PROCESS_VERSION=v1.12.66
-EXPLORER_API_VERSION=v1.12.66
-WEB3GW_APP_VERSION=v1.12.0
+CHRONOS_PROCESS_VERSION=v1.12.79
+CHRONOS_API_VERSION=v1.12.79
+EVENTPROVIDER_PROCESS_VERSION=v1.12.79
+EVENTPROVIDER_API_VERSION=v1.12.79
+EXCHANGE_PROCESS_VERSION=v1.12.79
+EXCHANGE_API_VERSION=v1.12.79
+EXPLORER_PROCESS_VERSION=v1.12.79
+EXPLORER_API_VERSION=v1.12.79
+WEB3GW_APP_VERSION=v1.12.27-msgexec3
 
 #MONGO LIMITS
 MONGO_RAM_LIMIT=70G
