feat: sentry sidecar

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -57,6 +57,15 @@ INJ_PEGGO_STATSD_ADDR=""
 GIT_TESTNET_TAG="v0.4.19-1672847099"
 GIT_MAINNET_TAG="v1.12.0-1704530206"
 
+# sidecar env #
+SIDECAR_IMAGE_VERSION=local
+SIDECAR_HEALTH_BLOCK_DIFF="30"
+SIDECAR_SENTRY_URL="https://sentry.tm.injective.network"
+SIDECAR_SYNC_TIME_DELTA="60"
+SIDECAR_SENTRY_WATCHER_INTERVAL="15"
+SIDECAR_LISTEN_ADDRESS="0.0.0.0"
+SIDECAR_LISTEN_PORT=8888
+
 # Indexer Env #
 INDEXER_GAS_ADJUSTMENT_COEF=1.5
 INDEXER_BLOCK_FETCH_JOBS=2
