--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -60,7 +60,7 @@ GIT_MAINNET_TAG="v1.12.0-1704530206"
 # sidecar env #
 SIDECAR_IMAGE_VERSION=local
 SIDECAR_HEALTH_BLOCK_DIFF="30"
-SIDECAR_SENTRY_URL="https://sentry.tm.injective.network"
+SIDECAR_SENTRY_URL="http://injective-core:26657"
 SIDECAR_SYNC_TIME_DELTA="60"
 SIDECAR_SENTRY_WATCHER_INTERVAL="15"
 SIDECAR_LISTEN_ADDRESS="0.0.0.0"
