--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -18,11 +18,11 @@ CHRONOS_PROCESS_VERSION=v1.12.79.1
 CHRONOS_API_VERSION=v1.12.79.1
 EVENTPROVIDER_PROCESS_VERSION=v1.12.79.1
 EVENTPROVIDER_API_VERSION=v1.12.79.1
-EXCHANGE_PROCESS_VERSION=v1.12.79.1
-EXCHANGE_API_VERSION=v1.12.79.1
+EXCHANGE_PROCESS_VERSION=v1.12.91
+EXCHANGE_API_VERSION=v1.12.91
 EXPLORER_PROCESS_VERSION=v1.12.79.1
 EXPLORER_API_VERSION=v1.12.79.1
-WEB3GW_APP_VERSION=v1.12.27-msgexec3
+WEB3GW_APP_VERSION=v1.12.82
 
 #MONGO LIMITS
 MONGO_RAM_LIMIT=70G
