feat: use weekly snapshots on mainnet + prunned ep option

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -34,6 +34,7 @@ SYNC_EXCHANGE_SNAPSHOT="true"
 SYNC_EXPLORER_SNAPSHOT="false"
 SYNC_CHRONOS_SNAPSHOT="true"
 SYNC_EVENT_PROVIDER_SNAPSHOT="true"
+SYNC_EVENT_PROVIDER_SNAPSHOT_TYPE="pruned"
 
 # Logging Env #
 LOG_LEVEL="info"
