--- a/docker/addons/docker-compose.provisioner.yaml
+++ b/docker/addons/docker-compose.provisioner.yaml
@@ -26,6 +26,7 @@ services:
       SYNC_EXPLORER_SNAPSHOT: ${SYNC_EXPLORER_SNAPSHOT}
       SYNC_CHRONOS_SNAPSHOT: ${SYNC_CHRONOS_SNAPSHOT}
       SYNC_EVENT_PROVIDER_SNAPSHOT: ${SYNC_EVENT_PROVIDER_SNAPSHOT}
+      SYNC_EVENT_PROVIDER_SNAPSHOT_TYPE: ${SYNC_EVENT_PROVIDER_SNAPSHOT_TYPE}
       INJ_HOME: /home/ubuntu/volumes/.injectived
       NETWORK: ${NETWORK}
       APP_VERSION: ${APP_VERSION}
