--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -20,9 +20,7 @@ services:
       - injective
     volumes:
       - ./volumes/mongo:/data/db
-      - ./volumes/mongo/eventProviderV2:/eventProviderV2
-      - ./volumes/mongo/exchangeV2:/exchangeV2
-      - ./volumes/mongo/explorerV2:/explorerV2
+      - ./volumes/dumps:/dumps
       - ./scripts/mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh
 
   injective-core:
