--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -14,15 +14,15 @@ NETWORK=testnet
 PASSPHRASE=""
 
 # Service Versions #
-CHRONOS_PROCESS_VERSION=v1.12.45
 CHRONOS_API_VERSION=v1.12.45
-EVENTPROVIDER_PROCESS_VERSION=v1.12.67
-EVENTPROVIDER_API_VERSION=v1.12.67
-EXCHANGE_PROCESS_VERSION=v1.12.71
-EXCHANGE_API_VERSION=v1.12.71
-EXPLORER_PROCESS_VERSION=v1.12.67
-EXPLORER_API_VERSION=v1.12.67
-WEB3GW_APP_VERSION=v1.12.46-rc.0
+CHRONOS_PROCESS_VERSION=v1.12.45
+EVENTPROVIDER_API_VERSION=v1.12.105
+EVENTPROVIDER_PROCESS_VERSION=v1.12.81
+EXCHANGE_API_VERSION=v1.12.105
+EXCHANGE_PROCESS_VERSION=v1.12.106
+EXPLORER_API_VERSION=v1.12.92
+EXPLORER_PROCESS_VERSION=v1.12.92
+WEB3GW_APP_VERSION=v1.12.81
 
 #MONGO LIMITS
 MONGO_RAM_LIMIT=32G
