feat: configurable statsd on core

--- a/docker/.env.mainnet.example
+++ b/docker/.env.mainnet.example
@@ -49,6 +49,9 @@ INJ_CORE_STACK_RESOURCE_RAM_LIMIT=80G
 INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=30G
 INJ_CORE_CMD_STREAM_API="--chainstream-server 0.0.0.0:9999" #Set empty string to disable
 WASM_MEM_CACHE_SIZE=3000
+# Statsd
+INJ_STATSD_ENABLED="true"
+INJ_STATSD_ADDRESS="host.docker.internal:8125"
 # Peggo Optional Env #
 INJ_ADDR=""
 INJ_PEGGO_STATSD_DISABLED="true"
