--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -43,8 +43,8 @@ services:
         yes 12345678 | injectived \
         --log-level=${LOG_LEVEL} \
         --rpc.laddr "tcp://0.0.0.0:26657" \
-        --statsd-address=statsd.injective.dev:8125 \
-        --statsd-enabled=true \
+        --statsd-address=${INJ_STATSD_ADDRESS} \
+        --statsd-enabled=${INJ_STATSD_ENABLED} \
         ${INJ_CORE_CMD_STREAM_API} \
         --wasm.memory_cache_size ${WASM_MEM_CACHE_SIZE} \
         start
