feat: configurable statsd agent

--- a/docker/.env.testnet.example
+++ b/docker/.env.testnet.example
@@ -49,8 +49,9 @@ INJ_CORE_STACK_RESOURCE_RAM_RESEVATION=20G
 INJ_CORE_CMD_STREAM_API="--chainstream-server 0.0.0.0:9999" #Set empty string to disable
 WASM_MEM_CACHE_SIZE=3000
 # Statsd
-INJ_STATSD_ENABLED="true"
+INJ_STATSD_ENABLED="false"
 INJ_STATSD_ADDRESS="host.docker.internal:8125"
+INJ_STATSD_AGENT="datadog"
 # Peggo Optional Env #
 INJ_ADDR=""
 INJ_PEGGO_STATSD_DISABLED="true"
